unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/CS_Billing_Schedule_Item__c.object-meta.xml
<CustomObject>
    <description>Individiual details for one billing period for one line within a Sales Order</description>
    <label>Billing Schedule Item</label>
    <nameField>
        <displayFormat>BILI-{00000000}</displayFormat>
        <label>Billing Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>