unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Accruals_Exported_by_Integration__c.field-meta.xml
<CustomField>
    <fullName>Accruals_Exported_by_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accruals Exported by Integration</label>
    <type>Checkbox</type>
</CustomField>