unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Accruals_Imported_To_ERP__c.field-meta.xml
<CustomField>
    <fullName>Accruals_Imported_To_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Exporting additional Accruals related to Broadcast Calendar end dates passing beyond the calendar month end of the order line</description>
    <label>Accruals Imported To ERP</label>
    <type>Checkbox</type>
</CustomField>