unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Accruals_Imported_To_ERP_Date__c.field-meta.xml
<CustomField>
    <fullName>Accruals_Imported_To_ERP_Date__c</fullName>
    <description>Used when additional Accruals are used for broadcast Calendar</description>
    <inlineHelpText>Used when additional Accruals are used for broadcast Calendar</inlineHelpText>
    <label>Accruals Imported To ERP Date</label>
    <type>DateTime</type>
</CustomField>