unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Accruals_Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Accruals_Integration_Message__c</fullName>
    <description>Messages back from the integration platform related to Additional Accruals for Broadcast Calendar period end overlap.</description>
    <inlineHelpText>Messages back from the integration platform related to Additional Accruals for Broadcast Calendar period end overlap.</inlineHelpText>
    <label>Accruals Integration Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>