unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Accruals_Ready_To_Export__c.field-meta.xml
<CustomField>
    <fullName>Accruals_Ready_To_Export__c</fullName>
    <description>Used by integration processes to determine if a Broadcast Calendar Accrual is required, and if so that it is ready to be exported.</description>
    <formula>AND(
Requires_Additional_Accruals__c,
NOT(Accruals_Exported_by_Integration__c),
  Billing_Period_End_Date__c  &lt; Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by integration processes to determine if a Broadcast Calendar Accrual is required, and if so that it is ready to be exported.</inlineHelpText>
    <label>Accruals Ready To Export</label>
    <type>Checkbox</type>
</CustomField>