unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Actuals_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Discrepancy__c</fullName>
    <description>Calculates the discrepancy between DFP and 3rd Party Actuals</description>
    <formula>IF(ISPICKVAL(Billing_Source__c, &quot;3rd Party Actuals&quot;) &amp;&amp; DFP_Actuals__c &gt;0, (X3rd_Party_Actuals__c - DFP_Actuals__c) / DFP_Actuals__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the discrepancy between DFP and 3rd Party Actuals</inlineHelpText>
    <label>Actuals Discrepancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>