unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advertiser as defined in the Sales Order.</description>
    <inlineHelpText>Advertiser as defined in the Sales Order.</inlineHelpText>
    <label>Advertiser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Schedules (Advertiser)</relationshipLabel>
    <relationshipName>Billing_Schedules_new1</relationshipName>
    <type>Lookup</type>
</CustomField>