unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agency as defined in the Sales Order.</description>
    <inlineHelpText>Agency as defined in the Sales Order.</inlineHelpText>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Schedules (Agency)</relationshipLabel>
    <relationshipName>Billing_Schedules_new2</relationshipName>
    <type>Lookup</type>
</CustomField>