unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agency_Commission__c</fullName>
    <description>Agency Commission as defined in  the Sales Order.</description>
    <inlineHelpText>Agency Commission as defined in  the Sales Order.</inlineHelpText>
    <label>Agency Commission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>