unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Bill_Run__c.field-meta.xml
<CustomField>
    <fullName>Bill_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Run</label>
    <referenceTo>Bill_Run__c</referenceTo>
    <relationshipLabel>Billing Schedule Items</relationshipLabel>
    <relationshipName>Billing_Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>