unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bill To Account</description>
    <inlineHelpText>Bill To Account</inlineHelpText>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Schedule Items (Bill to Account)</relationshipLabel>
    <relationshipName>Billing_Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>