unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount__c</fullName>
    <description>Billing Amount is calculated as Billing Quantity * Net Rate.  Billing Amount is rounded up to 2 decimals and adjustments to match the Sales Order Total are applied on the last period</description>
    <inlineHelpText>Billing Amount is calculated as Billing Quantity * Net Rate.  Billing Amount is rounded up to 2 decimals and adjustments to match the Sales Order Total are applied on the last period</inlineHelpText>
    <label>Billing Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>