unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Amount_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount_Adjustment__c</fullName>
    <description>If Is Last Line in Schedule then Total_billing_Amount_Remainder from header</description>
    <formula>IF( Is_Last_Line_in_Schedule__c =TRUE &amp;&amp; NOT(OR(CONTAINS(TEXT(Status__c), &quot;Closed&quot;), CONTAINS(TEXT(Status__c), &quot;Pending Closure&quot;))), IF(Insertion_Unit_Type__c = &#39;CPM&#39; || Insertion_Unit_Type__c = &#39;CPCV&#39; || Insertion_Unit_Type__c = &#39;CPCL&#39;, (Billing_Schedule__r.Total_Billed_Quantity_To_Date__c/1000) * Net_Rate__c - 
( Billing_Schedule__r.Total_Billed_Amount_To_Date__c ), Billing_Schedule__r.Total_Billed_Quantity_To_Date__c * Net_Rate__c - 
( Billing_Schedule__r.Total_Billed_Amount_To_Date__c ))
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Is Last Line in Schedule then Total_billing_Amount_Remainder from header</inlineHelpText>
    <label>Billing Amount Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>