unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Billing_Calendar__c</fullName>
    <description>Billing Calendar as defined in the Sales Order
- Standard
- Broadcast</description>
    <inlineHelpText>Billing Calendar as defined in the Sales Order
- Standard
- Broadcast</inlineHelpText>
    <label>Billing Calendar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>