unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <description>Billing Date based on the Billing Rule + Billing Calendar.
-Monthly Standard  : Last day of each Standard Calendar Month from SO line item  Start to End of Campaign.
-Monthly Broadcast: Last day of each Broadcast Calendar Month from SO line item  Start to End of Campaign</description>
    <inlineHelpText>Billing Date based on the Billing Rule + Billing Calendar</inlineHelpText>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>