unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <description>Billing Email confirmed in Sales Order screen. Originally pulled from Account &gt; Opportunity.</description>
    <inlineHelpText>Billing Email confirmed in Sales Order screen. Originally pulled from Account &gt; Opportunity.</inlineHelpText>
    <label>Billing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>