unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Gross_Amount__c</fullName>
    <description>Billing Gross Amount is calculated as Billing Quantity * Gross Rate using Workflow Field Update.</description>
    <inlineHelpText>Billing Gross Amount is calculated as Billing Quantity * Gross Rate using Workflow Field Update.</inlineHelpText>
    <label>Billing Gross Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>