unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Net_Amount__c</fullName>
    <description>Billing Net Amount is calculated as Billing Quantity * Net Rate using Workflow Field Update.</description>
    <inlineHelpText>Billing Net Amount is calculated as Billing Quantity * Net Rate using Workflow Field Update.</inlineHelpText>
    <label>Billing Net Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>