unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_End_Date__c</fullName>
    <description>- Monthly Standard: The earliest from SO Line End Date or last day of Standard Calendar Month for the Billing Date
 - Monthly Broadcast: The earliest from SO Line End Date or last day of Broadcast Calendar Month for the Billing Date</description>
    <inlineHelpText>- Monthly Standard: The earliest from SO Line End Date or last day of Standard Calendar Month for the Billing Date
 - Monthly Broadcast: The earliest from SO Line End Date or last day of Broadcast Calendar Month for the Billing Date</inlineHelpText>
    <label>Billing Period End Date</label>
    <type>Date</type>
</CustomField>