unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_Start_Date__c</fullName>
    <description>- Monthly Standard: The latest from SO Line Start Date or first day of Standard Calendar Month for the Billing Date
 - Monthly Broadcast: The latest from SO Line Start Date or first day of Broadcast Calendar Month for the Billing Date</description>
    <inlineHelpText>- Monthly Standard: The latest from SO Line Start Date or first day of Standard Calendar Month for the Billing Date
 - Monthly Broadcast: The latest from SO Line Start Date or first day of Broadcast Calendar Month for the Billing Date</inlineHelpText>
    <label>Billing Period Start Date</label>
    <type>Date</type>
</CustomField>