unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Quantity__c</fullName>
    <description>Billing Quantity is calculated as follows : 
- If Billing Source = Contracted -&gt; Billing Quantity = Overwrite Quantity if not 0 otherwise Forecast Quantity up to Capped Quantity 
- Updated by Workflow
- If Billing Source = DFP Actuals -&gt;Billing Quantity = Overwrite Quantity if not 0 otherwise DFP Actuals up to Capped Quantity 
- If Billing Source = 3rd Party Actuals -&gt; Billing Quantity = Overwrite Quantity if not 0 otherwise 3rd Party Actuals up to Capped Quantity</description>
    <inlineHelpText>Billing Quantity calculated from Forecast, Overwrite, Contracted and Capped fields.</inlineHelpText>
    <label>Billing Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>