unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rule__c</fullName>
    <description>Billing Rule as defined in the Sales Order Line
- Monthly Pro Rata Capped Cumulative</description>
    <inlineHelpText>Billing Rule as defined in the Sales Order Line
- Monthly Pro Rata Capped Cumulative</inlineHelpText>
    <label>Billing Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>