unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Billing_Source__c.field-meta.xml
<CustomField>
    <fullName>Billing_Source__c</fullName>
    <description>Billing Rule as defined in the Sales Order Line
 - Contracted
 - DFP Actuals
 - 3rd Party Actuals</description>
    <inlineHelpText>Billing Rule as defined in the Sales Order Line
 - Contracted
 - DFP Actuals
 - 3rd Party Actuals</inlineHelpText>
    <label>Billing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>DFP Actuals</fullName>
            </value>
            <value>
                <fullName>3rd Party Actuals</fullName>
            </value>
            <value>
                <fullName>Megaphone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>