unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Booked_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booked_Gross_Amount__c</fullName>
    <label>Booked Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>