unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Calculated_Net_Rate__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Net_Rate__c</fullName>
    <formula>IF(Insertion_Unit_Type__c = &#39;CPCV&#39; || Insertion_Unit_Type__c = &#39;CPCL&#39;, (Net_Rate__c/1000), Net_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>