unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Capped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Capped_Quantity__c</fullName>
    <description>Maximum Quantity that can be billed. Capped Quantity is calculated as follows:
 - Contracted Quantity - Total Billed</description>
    <formula>/*
* Added zeroing of negative values
*/
IF(Total_Billed_To_Date__c=0,Contracted_Quantity__c, IF ( (Contracted_Quantity__c - Total_Billed_To_Date__c) &lt; 0, 0, Contracted_Quantity__c - Total_Billed_To_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum Quantity that can be billed. Capped Quantity is calculated as follows:
 - Contracted Quantity - Total Billed</inlineHelpText>
    <label>Capped Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>