unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Date_Strategy_Slots__c.field-meta.xml
<CustomField>
    <fullName>Date_Strategy_Slots__c</fullName>
    <description>The number of units (Days typically) calculated to be in this billing period as calculated in the BillingDateStrategy</description>
    <inlineHelpText>The number of units (Days typically) calculated to be in this billing period as calculated in the BillingDateStrategy</inlineHelpText>
    <label>Date Strategy Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>