unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Delivery_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Quantity__c</fullName>
    <description>Calculated as follows: 
- If Overwrite Quantity &gt; 0 then Overwrite Quantity 
- Otherwise it is based on the Billing Source: 
* Contracted then Forecast Quantity 
* DFP Actuals then DFP Actuals 
* 3rd Party Actuals then 3rd Party Actuals
- WORKFLOW</description>
    <inlineHelpText>Calculated as follows: 
- If Overwrite Quantity &gt; 0 then Overwrite Quantity 
- Otherwise it is based on the Billing Source: 
* Contracted then Forecast Quantity 
* DFP Actuals then DFP Actuals 
* 3rd Party Actuals then 3rd Party Actuals</inlineHelpText>
    <label>Delivery Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>