unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/DFP_Actuals__c.field-meta.xml
<CustomField>
    <fullName>DFP_Actuals__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number  of impressions / clicks form DFP</description>
    <inlineHelpText>Number  of impressions / clicks form DFP</inlineHelpText>
    <label>1st Party Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>