unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/DFP_Actuals_as_of__c.field-meta.xml
<CustomField>
    <fullName>DFP_Actuals_as_of__c</fullName>
    <description>Reference for the timestamp that the DFP Actuals number relates to.</description>
    <inlineHelpText>Reference for the timestamp that the DFP Actuals number relates to.</inlineHelpText>
    <label>1st Party Actuals as of</label>
    <type>DateTime</type>
</CustomField>