unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID__c</fullName>
    <description>External ID formed by SO ID_BillingMonth_BillingYear</description>
    <formula>Sales_Order__c &amp; &#39;_&#39; &amp; TEXT(MONTH(Billing_Date__c)) &amp; &#39;_&#39; &amp;  TEXT(YEAR(Billing_Date__c))</formula>
    <inlineHelpText>External ID formed by SO ID_BillingMonth_BillingYear</inlineHelpText>
    <label>ERP ID</label>
    <type>Text</type>
</CustomField>