unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Export_to_ERP_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Export_to_ERP_Started_Date__c</fullName>
    <description>DateTime in which Mulesoft processed this record. This will trigger the Forecast Recalculation - SET BY WORKFLOW</description>
    <inlineHelpText>DateTime in which Mulesoft processed this record. This will trigger the Forecast Recalculation - SET BY WORKFLOW</inlineHelpText>
    <label>Export to ERP Started Date</label>
    <type>DateTime</type>
</CustomField>