unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Export_to_ERP_Success_Date__c.field-meta.xml
<CustomField>
    <fullName>Export_to_ERP_Success_Date__c</fullName>
    <description>DateTime in which NetSuite processed this record - SET BY WORKFLOW</description>
    <inlineHelpText>DateTime in which NetSuite processed this record - SET BY WORKFLOW</inlineHelpText>
    <label>Export to ERP Success Date</label>
    <type>DateTime</type>
</CustomField>