unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Exported_By_Mulesoft__c.field-meta.xml
<CustomField>
    <fullName>Exported_By_Mulesoft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox set by Mulesoft</description>
    <inlineHelpText>Checkbox set by Mulesoft</inlineHelpText>
    <label>Exported By Mulesoft</label>
    <type>Checkbox</type>
</CustomField>