unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Exported_by_Mulesoft_Date__c.field-meta.xml
<CustomField>
    <fullName>Exported_by_Mulesoft_Date__c</fullName>
    <description>DateTime in which Mulesoft processed this record. This will trigger the Forecast Recalculation - SET BY WORKFLOW</description>
    <inlineHelpText>DateTime in which Mulesoft processed this record. This will trigger the Forecast Recalculation - SET BY WORKFLOW</inlineHelpText>
    <label>Exported by Mulesoft Date</label>
    <type>DateTime</type>
</CustomField>