unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Exported_to_ERP_Message__c.field-meta.xml
<CustomField>
    <fullName>Exported_to_ERP_Message__c</fullName>
    <description>Exported to ERP Message</description>
    <inlineHelpText>Exported to ERP Message</inlineHelpText>
    <label>Exported to ERP Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>