unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Exported_to_Integration__c.field-meta.xml
<CustomField>
    <fullName>Exported_to_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox set by Mulesoft</description>
    <inlineHelpText>Checkbox set by Mulesoft</inlineHelpText>
    <label>Exported to Integration</label>
    <type>Checkbox</type>
</CustomField>