unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Flight_Begin__c.field-meta.xml
<CustomField>
    <fullName>Flight_Begin__c</fullName>
    <description>Flight Begin as defined in the Sales Order Line.</description>
    <inlineHelpText>Flight Begin as defined in the Sales Order Line.</inlineHelpText>
    <label>Flight Begin</label>
    <type>Date</type>
</CustomField>