unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <description>unit Price * Forecast Qty

Updated in Workflow</description>
    <inlineHelpText>Calculated as unit Price * Forecast Qty</inlineHelpText>
    <label>Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>