unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Forecast_Amount_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount_Adjustment__c</fullName>
    <description>The rounding adjustment for Forecast Amount that should be shown on the last row of the schedule</description>
    <formula>IF(Is_Last_Line_in_Schedule__c =TRUE &amp;&amp; NOT(OR(CONTAINS(TEXT(Status__c), &quot;Closed&quot;), CONTAINS(TEXT(Status__c), &quot;Pending Closure&quot;))), Total_Price__c - (Billing_Schedule__r.Total_Remaining_Forecast_Amount__c + Billing_Schedule__r.Total_Billed_Amount_To_Date__c ) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The rounding adjustment for Forecast Amount that should be shown on the last row of the schedule</inlineHelpText>
    <label>Forecast Amount Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>