unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Gross_Rate__c.field-meta.xml
<CustomField>
    <fullName>Gross_Rate__c</fullName>
    <description>Gross Unit Rate</description>
    <inlineHelpText>Gross Unit Rate</inlineHelpText>
    <label>Gross Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>