unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Imported_By_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Imported_By_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by mulesoft</description>
    <inlineHelpText>Set by mulesoft</inlineHelpText>
    <label>Imported By NetSuite</label>
    <type>Checkbox</type>
</CustomField>