unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Imported_by_NetSuite_Date__c.field-meta.xml
<CustomField>
    <fullName>Imported_by_NetSuite_Date__c</fullName>
    <description>DateTime in which NetSuite processed this record - SET BY WORKFLOW</description>
    <inlineHelpText>DateTime in which NetSuite processed this record - SET BY WORKFLOW</inlineHelpText>
    <label>Imported by NetSuite Date</label>
    <type>DateTime</type>
</CustomField>