unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Insertion_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Unit_Type__c</fullName>
    <description>Insertion Unit Type as defined in the Sales Order Line.</description>
    <inlineHelpText>Insertion Unit Type as defined in the Sales Order Line.</inlineHelpText>
    <label>Insertion Unit Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>