unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Invoice_Agency_Fee_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Agency_Fee_GL_Code__c</fullName>
    <description>Invoice Agency Fee GL Code</description>
    <inlineHelpText>Invoice Agency Fee GL Code</inlineHelpText>
    <label>Invoice Agency Fee GL Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>