unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Invoice_Line_Layout__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Layout__c</fullName>
    <description>Invoice Line Layout</description>
    <inlineHelpText>Invoice Line Layout</inlineHelpText>
    <label>Invoice Line Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted Volume | Billable Volume | Rate | Amount</fullName>
            </value>
            <value>
                <fullName>Billable Volume | Rate | Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>