unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/ipp_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ipp_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>