unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <description>Specifies if a Line is considered &#39;open or closed&#39; based on status</description>
    <formula>OR(
ISPICKVAL(Status__c, &quot;Ready&quot;),
ISPICKVAL(Status__c, &quot;Pending Closure&quot;),
ISPICKVAL(Status__c, &quot;Pending&quot;), 
ISPICKVAL(Status__c, &quot;Locked&quot;),
ISPICKVAL(Status__c, &quot;Closed&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies if a Line is considered &#39;open or closed&#39; based on status</inlineHelpText>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>